# ot-harjoitustyo

./: .coveragerc  .env  .env.test  .gitignore  .test.env  README.md  pyproject.toml  pytest.ini  tasks.py
data/: database.sqlite  dreams.csv
dokumentaatio/: arkkitehtuuri.md  changelog.md  kayttoohje.md  tekoalyn_kaytto.md  testaus.md  tyoaikakirjanpito.md  vaatimusmaarittely.md
laskarit/viikko1/: gitlog.txt  komentorivi.txt
laskarit/viikko2/: pyproject.toml
laskarit/viikko2/maksukortti/src/tests/: maksukortti_test.py
laskarit/viikko2/unicafe/src/tests/: kassapaate_test.py  maksukortti_test.py
laskarit/viikko3/: monopoli.md
src/: build.py  config.py  database_connection.py  index.py  initalize_database.py
src/UI/: homepage_view.py  login_view.py  registration_view.py  ui.py
src/entities/: diary.py  dream.py  user.py
src/logic/: dreamland_logic.py
src/repositories/: database_connection.py  diary_repository.py  dream_repository.py  initalize_database.py  user_repository.py
src/tests/: configuration_test.py  conftest.py  diary_repository_test.py  dream_repository_test.py  dreamland_logic_test.py  user_repository_test.py
src/ui/: dream_view.py  forms.py  homepage_view.py  login_view.py  registration_view.py  ui.py
